# netos-proto

./: .dockerignore  CMakeLists.txt  README.md
design/: ARCHITECTURE.md
docs/: AGENT_CONTEXT.md  CODEX_EVENT_CHECK.md  CONTINUITY.md  CONTRACTS.md  DEMO_3_NODE.md  DEMO_MAP.md  DEVELOPMENT_PLAN.md  HANDOFF.md  KATHARA_DEMO.md  NS3.md  OBSERVABILITY.md  PROTOTYPE_OVERVIEW.md  QUICKSTART.md  ROADMAP.md  RUNBOOK.md  STATUS.md  TECH_STACK.md  WORKFLOW.md  i-write-history.md
infra/: Dockerfile  Dockerfile.kathara  docker-compose.3-node.yml  docker-compose.yml  entrypoint.sh
infra/kathara/3-node/: lab.conf  node2.startup  node3.startup
infra/kathara/4-node-hub/: README.md  lab.conf  node1.startup  node2.startup  node3.startup  node4.startup
infra/topology/: README.md
infra/topology/2-node/: node2.env
scripts/: check_topology_env.sh  demo.sh  duplicate_request_demo.sh  failure_injection_demo.sh  hop_story_3node.sh  inspect_demo.sh  observe_edge_cases.sh  pull_path_demo.sh  table_stats_demo.sh  table_stats_health.sh  trace_demo.sh  validate_3node_demo.sh  validate_demo.sh
scripts/ns3/: generate_topology.py
src/netos/: CMakeLists.txt  main.cpp
src/netos/cache/: redis_client.cpp  redis_client.h
src/netos/core/: config.cpp  config.h  config_validation.cpp  config_validation.h  logger.cpp  logger.h  message.cpp  message.h  string_utils.cpp  string_utils.h
src/netos/network/: address.cpp  address.h  network_api.h  topology.cpp  topology.h  udp_network.cpp  udp_network.h  udp_transport.cpp  udp_transport.h
src/netos/node/: data_pipeline.cpp  data_pipeline.h  forward_queue.cpp  forward_queue.h  node.cpp  node.h  request_pipeline.cpp  request_pipeline.h
src/netos/tables/: bloom_filter.cpp  bloom_filter.h  content_bf_fallback.cpp  content_bf_fallback.h  content_bf_table.cpp  content_bf_table.h  query_bf_aggregator.cpp  query_bf_aggregator.h  query_bf_limiter.cpp  query_bf_limiter.h  query_table.cpp  query_table.h  sync_table.cpp  sync_table.h
src/netos/tests/: core_smoke.cpp
(+3 files in other folders)
